--- a/HTML/Task 10/index.html
+++ b/HTML/Task 10/index.html
@@ -44,7 +44,7 @@
    <p>Do you like designing <input type="text"></p>
    <p>Do you like designing <input type="checkbox"></p>
    <p>Write a description <textarea></textarea></p>
-   <button type="button">Submit</button>
+   <button type="button">Submit</button><br>
 
 
    <div class="button">
