--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body >
-       <nav class="navbar navbar-expand-md navbar navbar-expand-sm bg-info navbar-light text-light sticky-top ">
+
+  
+
+       <nav class="navbar navbar-expand-md navbar navbar-expand-sm bg-primary navbar-light text-light sticky-top ">
         <div class="container-fluid">
             
             <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,6 +101,14 @@
 
     </section>
 
+    <section id="Projects">
+      <div class="projects">
+      <h1><u>Projects</u></h1>
+      <p>Some of the Web Projects that i have done are</p>
+      Learning Fest:<a href="https://github.com/joshjosh1248/Learning-Fest.git">https://github.com/joshjosh1248/Learning-Fest.git</a>
+      
+      </div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
