--- a/Business/index.html
+++ b/Business/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <title>Dally's Homemade Pickles </title>
 </head>
 <body >
        <nav class="navbar navbar-expand-md navbar navbar-expand-sm bg-info navbar-light text-light sticky-top ">
