--- a/Business/index.html
+++ b/Business/index.html
@@ -234,7 +234,7 @@
 
       <h1><u>Contact Us</u></h1>
       <div class="contacts">
-      Phone No:<a href="tel:9539922302">9539922302</a><br>
+      Phone No:<a href="tel:9539922302"><img src="images/icons8-phone-48.png"></a><br>
       Email Id:<a href="mailto:Manujerald@gmail.com">Manujerald@gmail.com</a>
       </div>
 
